# PureDB

./: .gitignore  ChangeLog  FORMAT_DESCR  LICENSE  Makefile.am  README  README.markdown  autogen.sh  configure.ac
src/: Makefile.am  example_read.c  example_write.c  puredb_p.h  puredb_read.c  puredb_read.h  puredb_write.c  puredb_write.h  regression.c
